--- a/.travis.yml
+++ b/.travis.yml
@@ -3,14 +3,24 @@ language: python
 python:
   - "3.5"
 
-env:
-- DJANGO=1.11.4
+services:
+  - postgresql
 
 install:
-  - pip install --upgrade pip
-  - pip install -q Django==$DJANGO
-  - pip install -U pytest
+  - pip install -r requirements/test-requirements.txt
+
+before_script:
+  - cp ecom_merci/.env_test ecom_merci/.env
+  - npm install -g bower
+  - ./check_migrations.sh
+  - psql -c "CREATE USER ecom_merci_test WITH PASSWORD 'ecom_merci_test'" -U postgres;
+  - psql -c "CREATE DATABASE ecom_merci_test OWNER ecom_merci_test;" -U postgres
 
 script:
-  - pytest
+  - ./manage.py migrate
+  - ./manage.py bower install
+  - py.test --create-db
 
+addons:
+    hosts:
+        - 127.0.0.1 ecom_mercidb
