--- a/.travis.yml
+++ b/.travis.yml
@@ -11,14 +11,13 @@ install:
 
 before_script:
   - cp ecom_merci/.env_test ecom_merci/.env
-  - npm install -g bower
   - ./check_migrations.sh
+  - flake8 --exclude='ipython_log.py*,migrations,templates' .
   - psql -c "CREATE USER ecom_merci_test WITH PASSWORD 'ecom_merci_test'" -U postgres;
   - psql -c "CREATE DATABASE ecom_merci_test OWNER ecom_merci_test;" -U postgres
 
 script:
   - ./manage.py migrate
-  - ./manage.py bower install
   - py.test --create-db
 
 addons:
