Adding manage.py file in exceptions list from flake8 script
Signed-off-by: Eliseu Egewarth <eliseuegewarth@gmail.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ install:
 before_script:
   - cp ecom_merci/.env_test ecom_merci/.env
   - ./check_migrations.sh
-  - flake8 --exclude='ipython_log.py*,migrations,templates' .
+  - flake8 --exclude='ipython_log.py*,migrations,templates, manage.py' .
   - psql -c "CREATE USER ecom_merci_test WITH PASSWORD 'ecom_merci_test'" -U postgres;
   - psql -c "CREATE DATABASE ecom_merci_test OWNER ecom_merci_test;" -U postgres
 
