Fix requirements conflicts

--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -1,103 +1,10 @@
-adium-theme-ubuntu==0.3.4
-attrs==15.2.0
-backports-abc==0.5
-backports.shutil-get-terminal-size==1.0.0
-beautifulsoup4==4.4.1
-bleach==2.0.0
-blinker==1.3
-certifi==2017.7.27.1
-characteristic==14.3.0
-chardet==2.3.0
-command-not-found==0.3
-configparser==3.5.0
-cryptography==1.2.3
-cycler==0.10.0
-debtags==2.0
-decorator==4.1.2
-defer==1.0.6
-dirspec==13.10
-duplicity==0.7.6
-entrypoints==0.2.3
-enum34==1.1.2
-functools32==3.2.3.post2
-html5lib==0.999999999
-httplib2==0.9.1
-idna==2.0
-ipaddress==1.0.16
-ipykernel==4.6.1
-ipython==5.4.1
-ipython-genutils==0.2.0
-ipywidgets==7.0.0
-Jinja2==2.9.6
-jsonschema==2.6.0
-jupyter==1.0.0
-jupyter-client==5.1.0
-jupyter-console==5.2.0
-jupyter-core==4.3.0
-lockfile==0.12.2
-lxml==3.5.0
-MarkupSafe==1.0
-matplotlib==2.0.2
-mistune==0.7.4
-nbconvert==5.2.1
-nbformat==4.4.0
-notebook==5.0.0
-numpy==1.13.1
-oauthlib==1.0.3
-oneconf==0.3.9
-PAM==0.4.2
-pandocfilters==1.4.2
-pathlib2==2.3.0
-pbr==3.1.1
-pexpect==4.2.1
+Django==1.11.4
+django-extensions==1.8.1
 pickleshare==0.7.4
-Pillow==3.1.2
-piston-mini-client==0.7.5
-prompt-toolkit==1.0.15
 ptyprocess==0.5.2
-pyasn1==0.1.9
-pyasn1-modules==0.0.7
-pycrypto==2.6.1
-pycups==1.9.73
-Pygments==2.2.0
-pygobject==3.20.0
-PyJWT==1.3.0
-pyOpenSSL==0.15.1
-pyparsing==2.2.0
-pyserial==3.0.1
-python-apt==1.1.0b1
-python-dateutil==2.6.1
-python-debian==0.1.27
+python-decouple==3.1
 pytz==2017.2
-pyxdg==0.25
-pyzmq==16.0.2
-qtconsole==4.3.1
-scandir==1.5
-service-identity==16.0.0
-simplegeneric==0.8.1
-singledispatch==3.4.0.3
 six==1.10.0
-<<<<<<< HEAD
-software-center-aptd-plugins==0.0.0
-stevedore==1.25.0
-subprocess32==3.2.7
-terminado==0.6
-testpath==0.3.1
-tornado==4.5.2
-traitlets==4.3.2
-Twisted==16.0.0
-ubuntuone-client-data==14.4
-unity-lens-photos==1.0
-vboxapi==1.0
-virtualenv==15.1.0
-virtualenv-clone==0.2.6
-virtualenvwrapper==4.7.2
-wcwidth==0.1.7
-webencodings==0.5.1
-widgetsnbextension==3.0.2
-zope.interface==4.1.3
-=======
 Unipath==1.1
 dj-database-url
 psycopg2
->>>>>>> cf021265a29dfb3c9202872360b492ab391da7c0
