--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -1,3 +1,11 @@
+pinax-cli
+django-user-accounts==1.3.1
+pinax-webanalytics==2.0.4
+pinax-eventlog==1.1.2
+
+Django==1.11.4
+pinax-theme-bootstrap==7.10.1
+
 django-extensions==1.8.1
 pickleshare==0.7.4
 ptyprocess==0.5.2
@@ -7,12 +15,3 @@ six==1.10.0
 Unipath==1.1
 dj-database-url
 psycopg2
-django-suit==0.2.25
-
-django-user-accounts==1.3.1
-pinax-webanalytics==2.0.4
-pinax-eventlog==1.1.2
-
-Django==1.9.8
-pinax-theme-bootstrap==7.10.1
-
