Adding project settings to pytest.ini
Signed-off-by: Eliseu Egewarth <eliseuegewarth@gmail.com>

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,7 @@
 [pytest]
-python_files = tests.py test_*.py *_test.py
+DJANGO_SETTINGS_MODULE=ecom_merci.settings
+python_files = tests.py test_*.py *_test.py *_tests.py
 env=PYTHONPATH=.
+
+addopts = --create-db
+
